Changes with melon 2.6.0                                          21 Nov 2022
    *) Fixed bug of lang pipe send function
    *) Optimized callback function about lang task exit
    *) Optimized string macros
    *) Added trace mode

Changes with melon 2.5.6                                          20 Nov 2022
    *) Removed no-use macro
    *) Optimized  log component
    *) Optimized melang pipe
    *) Fixed bug of melang pipe
    *) Fixed Kqueue bug
    *) Optimized timer event
    *) Added timer cancellation function

Changes with melon 2.5.5                                          17 Nov 2022
    *) Removed no-use macros
    *) Optimized log component
    *) Updated log docs

Changes with melon 2.5.4                                          14 Nov 2022
    *) Fixed bug of error component
    *) Added functions in C and Melang to send message from c to script
    *) Updated docs

Changes with melon 2.5.3                                          03 Nov 2022
    *) Optimize melang performance
    *) Update import function of melang
    *) update logo
    *) Updated naming conventions of hash, rbtree, queue, stack and fork components
    *) Optimize argument of iterate function in rbtree
    *) Added macros for getting user data from fheap and rbtree nodes
    *) Updated docs
    *) Added error component

Changes with melon 2.5.2                                          29 Sep 2022
    *) Upgraded iothread
    *) Optimized lang lock
    *) Updated functions in lang
    *) Fixed event bugs
    *) Fixed memory pool bug in lang

Changes with melon 2.5.1                                          23 Sep 2022
    *) Fixed event bugs
    *) Optimized event
    *) Updated functions of lang
    *) Fixed bugs of lang
    *) Added eval as an internal function of melang

Changes with melon 2.5.0                                          16 Sep 2022
    *) Updated rbtree functions
    *) Optimized iothread
    *) Upgraded event to support multi-thread