@@ -5,7 +5,7 @@ sys = import('sys');
 
 pipe('subscribe');
 while (1) {
-    ret = pipe('recv');
+    ret = Pipe('recv');
     if (ret) {
         for (i = 0; i < sys.size(ret); ++i) {
             sys.print(ret[i]);
